--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,16 @@ language: python
 python:
   - "3.7"
   
+before_install:
+  - sudo apt-get update
+  - sudo apt-get -y install libxml2-dev
+  
 install:
   - pip install pandas
   - pip install matplotlib
   - pip install seaborn
   - pip install numpy
   - pip install sklearn
-  
-  script:
-  - python3 loading.py
+
+script:
+  - python3 Heatmap.py
